fix: search input's clear button overflow

--- a/packages/logos-docusaurus-theme/src/client/theme/SearchBar/SearchInput/SearchInput.module.scss
+++ b/packages/logos-docusaurus-theme/src/client/theme/SearchBar/SearchInput/SearchInput.module.scss
@@ -17,6 +17,8 @@
 
 .textField button svg {
   max-height: 100% !important;
+  width: 14px;
+  height: auto;
 }
 
 .root input {
